force-app/main/default/objects/NewMatter__c/NewMatter__c.object-meta.xml
<CustomObject>
    <label>新規</label>
    <nameField>
        <displayFormat>NM-{000000000}</displayFormat>
        <label>契約手続き</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>