force-app/main/default/objects/NewMatter__c/fields/AcceptContactDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptContactDate__c</fullName>
    <label>受付連絡日</label>
    <type>Date</type>
</CustomField>