force-app/main/default/objects/NewMatter__c/fields/AccountNameRealEstate__c.field-meta.xml
<CustomField>
    <fullName>AccountNameRealEstate__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名前</label>
    <type>Text</type>
</CustomField>