force-app/main/default/objects/NewMatter__c/fields/AdressApplication__c.field-meta.xml
<CustomField>
    <fullName>AdressApplication__c</fullName>
    <formula>Application__r.AgencyAdress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>住所_申請</label>
    <type>Text</type>
</CustomField>