force-app/main/default/objects/NewMatter__c/fields/AgencyEvaluationDate__c.field-meta.xml
<CustomField>
    <fullName>AgencyEvaluationDate__c</fullName>
    <label>仲介会社評価日</label>
    <type>Date</type>
</CustomField>