force-app/main/default/objects/NewMatter__c/fields/AgencyEvaluator__c.field-meta.xml
<CustomField>
    <fullName>AgencyEvaluator__c</fullName>
    <label>仲介会社評価者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>