force-app/main/default/objects/NewMatter__c/fields/AgencyStaffFirstName__c.field-meta.xml
<CustomField>
    <fullName>AgencyStaffFirstName__c</fullName>
    <formula>AgencyStaff__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仲介担当(名)</label>
    <type>Text</type>
</CustomField>