force-app/main/default/objects/NewMatter__c/fields/AgencyStaffLastName__c.field-meta.xml
<CustomField>
    <fullName>AgencyStaffLastName__c</fullName>
    <formula>AgencyStaff__r.LastName</formula>
    <label>仲介担当(姓)</label>
    <type>Text</type>
</CustomField>