force-app/main/default/objects/NewMatter__c/fields/AgencyStaffName__c.field-meta.xml
<CustomField>
    <fullName>AgencyStaffName__c</fullName>
    <formula>AgencyStaff__r.LastName &amp;  AgencyStaff__r.FirstName</formula>
    <label>仲介担当者名</label>
    <type>Text</type>
</CustomField>