force-app/main/default/objects/NewMatter__c/fields/AgencyTraderHeadQuarter__c.field-meta.xml
<CustomField>
    <fullName>AgencyTraderHeadQuarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>仲介業者本社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>新規 (仲介業者本社)</relationshipLabel>
    <relationshipName>NewMatterAgencyTraderHeadQuarter</relationshipName>
    <type>Lookup</type>
</CustomField>