force-app/main/default/objects/NewMatter__c/fields/AgencyTraderName__c.field-meta.xml
<CustomField>
    <fullName>AgencyTraderName__c</fullName>
    <formula>Agency__r.Name</formula>
    <label>仲介業者名</label>
    <type>Text</type>
</CustomField>