force-app/main/default/objects/NewMatter__c/fields/AgencyTraderPhone__c.field-meta.xml
<CustomField>
    <fullName>AgencyTraderPhone__c</fullName>
    <label>仲介電話番号</label>
    <type>Phone</type>
</CustomField>