force-app/main/default/objects/NewMatter__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>NewMatterApplicationRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>