force-app/main/default/objects/NewMatter__c/fields/ApplicationFormReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormReceiptDate__c</fullName>
    <formula>TEXT(Application__r.ApplicationArriveDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申請書着日</label>
    <type>Text</type>
</CustomField>