force-app/main/default/objects/NewMatter__c/fields/ApprovedContactEmployeeAutoNG__c.field-meta.xml
<CustomField>
    <fullName>ApprovedContactEmployeeAutoNG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認後連絡社員自動NG</label>
    <type>Checkbox</type>
</CustomField>