force-app/main/default/objects/NewMatter__c/fields/AutoCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AutoCorrespondence__c</fullName>
    <formula>ServiceContractNewMatter__r.AutoCorrespondence__c</formula>
    <label>自動対応</label>
    <type>Checkbox</type>
</CustomField>