force-app/main/default/objects/NewMatter__c/fields/AutoReminderUnavailableIs__c.field-meta.xml
<CustomField>
    <fullName>AutoReminderUnavailableIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動督促不可フラグ</label>
    <type>Checkbox</type>
</CustomField>