force-app/main/default/objects/NewMatter__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約</label>
    <referenceTo>Cancel__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>NewMatterCancel_del</relationshipName>
    <type>Lookup</type>
</CustomField>