force-app/main/default/objects/NewMatter__c/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SNT担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>NewMatterSectionRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>