force-app/main/default/objects/NewMatter__c/fields/ChargeTeamEmail__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeamEmail__c</fullName>
    <formula>ChargeTeam__r.Email__c</formula>
    <label>担当チームメール</label>
    <type>Text</type>
</CustomField>