force-app/main/default/objects/NewMatter__c/fields/ChargeTeamFax__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeamFax__c</fullName>
    <formula>ChargeTeam__r.Fax__c</formula>
    <label>担当チームFAX</label>
    <type>Text</type>
</CustomField>