force-app/main/default/objects/NewMatter__c/fields/ChargeTeamName__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeamName__c</fullName>
    <formula>ChargeTeam__r.Name</formula>
    <label>担当チーム名</label>
    <type>Text</type>
</CustomField>