force-app/main/default/objects/NewMatter__c/fields/ChargeTeamPhone__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeamPhone__c</fullName>
    <formula>ChargeTeam__r.Phone__c</formula>
    <label>担当チームTEL</label>
    <type>Text</type>
</CustomField>