force-app/main/default/objects/NewMatter__c/fields/CheckListCollectDate__c.field-meta.xml
<CustomField>
    <fullName>CheckListCollectDate__c</fullName>
    <label>チェックリスト回収日</label>
    <type>Date</type>
</CustomField>