force-app/main/default/objects/NewMatter__c/fields/CompanyConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyConfirmDate__c</fullName>
    <label>企業確認日</label>
    <type>Date</type>
</CustomField>