force-app/main/default/objects/NewMatter__c/fields/CompanyReplyReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyReplyReceiptDate__c</fullName>
    <label>企業から回答受領日</label>
    <type>Date</type>
</CustomField>