force-app/main/default/objects/NewMatter__c/fields/ConclusionRecipient__c.field-meta.xml
<CustomField>
    <fullName>ConclusionRecipient__c</fullName>
    <label>締結受者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>