force-app/main/default/objects/NewMatter__c/fields/ConclusionRequester__c.field-meta.xml
<CustomField>
    <fullName>ConclusionRequester__c</fullName>
    <label>締結へ依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>