force-app/main/default/objects/NewMatter__c/fields/ConfirmationRegistrationDateRealEsta__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationRegistrationDateRealEsta__c</fullName>
    <formula>ConfirmationRegistrationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ご確認書登録日</label>
    <type>Date</type>
</CustomField>