force-app/main/default/objects/NewMatter__c/fields/ConfirmRequestReplyDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmRequestReplyDate__c</fullName>
    <label>確認依頼回答日</label>
    <type>Date</type>
</CustomField>