force-app/main/default/objects/NewMatter__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約書</label>
    <type>Checkbox</type>
</CustomField>