force-app/main/default/objects/NewMatter__c/fields/ContractChangeApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeApplicationDate__c</fullName>
    <label>名変申入れ日</label>
    <type>Date</type>
</CustomField>