force-app/main/default/objects/NewMatter__c/fields/ContractContentConfirmDocumentArriveDate__c.field-meta.xml
<CustomField>
    <fullName>ContractContentConfirmDocumentArriveDate__c</fullName>
    <label>契約内容確認書類着日</label>
    <type>Date</type>
</CustomField>