force-app/main/default/objects/NewMatter__c/fields/ContractDocumentScrutinist__c.field-meta.xml
<CustomField>
    <fullName>ContractDocumentScrutinist__c</fullName>
    <label>契約書類精査者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>