force-app/main/default/objects/NewMatter__c/fields/ContractMoneyAccount1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAccount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約金送金先1_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>NewMatterBankAccountRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>