force-app/main/default/objects/NewMatter__c/fields/ContractMoneyPaymentAmount2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyPaymentAmount2__c</fullName>
    <formula>FifthSetConfirm__r.ContractMoneyPaymentAmount2__c</formula>
    <label>契約金②支払額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>