force-app/main/default/objects/NewMatter__c/fields/ContractMoneyPaymentDate2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyPaymentDate2__c</fullName>
    <formula>FifthSetConfirm__r.ContractMoneyRemittanceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約金支払日</label>
    <type>Date</type>
</CustomField>