force-app/main/default/objects/NewMatter__c/fields/ContractMoneyRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceDate__c</fullName>
    <formula>FifthSetConfirm__r.ContractMoneyRemittanceDate__c</formula>
    <label>契約金送金日</label>
    <type>Date</type>
</CustomField>