force-app/main/default/objects/NewMatter__c/fields/ContractMoneyRemittanceScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceScheduledDate__c</fullName>
    <formula>DATE(YEAR(ContractStartScheduledDate__c ),MONTH(ContractStartScheduledDate__c),DAY(ContractStartScheduledDate__c) - 3)</formula>
    <label>契約金送金予定日</label>
    <type>Date</type>
</CustomField>