force-app/main/default/objects/NewMatter__c/fields/ContractMoneyTransferCharges2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyTransferCharges2__c</fullName>
    <formula>IF(ISBLANK( FifthSetConfirm__r.ContractMoneyPaymentAmount2__c ) = False,$Setup.SyatakusanSetting__c.TransferFee__c ,0)</formula>
    <label>契約金②振込手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>