force-app/main/default/objects/NewMatter__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <formula>FifthSetConfirm__r.ContractStartDate__c</formula>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>