force-app/main/default/objects/NewMatter__c/fields/ContractStartDateCategoryRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateCategoryRealEstate__c</fullName>
    <formula>TEXT(ContractStartDateCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約開始日_区分</label>
    <type>Text</type>
</CustomField>