force-app/main/default/objects/NewMatter__c/fields/ContractStartDateSupplement__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateSupplement__c</fullName>
    <label>契約開始日_備考</label>
    <type>TextArea</type>
</CustomField>