force-app/main/default/objects/NewMatter__c/fields/ContractStartDateSupplementForEmployee__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateSupplementForEmployee__c</fullName>
    <label>契約開始日補足</label>
    <type>TextArea</type>
</CustomField>