force-app/main/default/objects/NewMatter__c/fields/ContractTermsContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContractTermsContactDate__c</fullName>
    <label>契約条件連絡日</label>
    <type>Date</type>
</CustomField>