force-app/main/default/objects/NewMatter__c/fields/ContractTermsExplanationEmailSender__c.field-meta.xml
<CustomField>
    <fullName>ContractTermsExplanationEmailSender__c</fullName>
    <label>契約条件説明メール送信者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>