force-app/main/default/objects/NewMatter__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>CorporateHousingRegulationNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>