force-app/main/default/objects/NewMatter__c/fields/CurrentContractContractor__c.field-meta.xml
<CustomField>
    <fullName>CurrentContractContractor__c</fullName>
    <label>現契約名義人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>