force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyEmail__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyEmail__c</fullName>
    <label>決定不動産メールアドレス</label>
    <type>Email</type>
</CustomField>