force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyEmailForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyEmailForEmployee__c</fullName>
    <label>決定不動産メールアドレス</label>
    <type>Email</type>
</CustomField>