force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyFaxForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyFaxForEmployee__c</fullName>
    <label>決定不動産FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>