force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyName__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyName__c</fullName>
    <label>決定不動産会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>