force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyNameForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyNameForEmployee__c</fullName>
    <label>決定不動産会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>