force-app/main/default/objects/NewMatter__c/fields/DecisionAgencyPhoneForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencyPhoneForEmployee__c</fullName>
    <label>決定不動産電話番号</label>
    <type>Phone</type>
</CustomField>