force-app/main/default/objects/NewMatter__c/fields/DecisionAgencySraffName__c.field-meta.xml
<CustomField>
    <fullName>DecisionAgencySraffName__c</fullName>
    <label>決定不動産担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>