force-app/main/default/objects/NewMatter__c/fields/DecisionAtApplicationCounter__c.field-meta.xml
<CustomField>
    <fullName>DecisionAtApplicationCounter__c</fullName>
    <formula>Account__r.ServiceContractRenewalConditionChange__r.DecisionAtApplicationCounter__c</formula>
    <label>決裁申請時窓口</label>
    <type>Text</type>
</CustomField>