force-app/main/default/objects/NewMatter__c/fields/DecisionAuthority__c.field-meta.xml
<CustomField>
    <fullName>DecisionAuthority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁権限</label>
    <referenceTo>DecisionAuthority__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>NewMatteroJIT</relationshipName>
    <type>Lookup</type>
</CustomField>