force-app/main/default/objects/NewMatter__c/fields/DecisionConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionConfirmDate__c</fullName>
    <label>決定確認日</label>
    <type>Date</type>
</CustomField>