force-app/main/default/objects/NewMatter__c/fields/DecisionContactStatus__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactStatus__c</fullName>
    <formula>IF(ISBLANK(EmployeeDecisionContactConfirmDate__c) &amp;&amp; ISBLANK(AgencyDecisionAcceptDate__c), 
			&quot;連絡なし&quot;, 
			IF(NOT(ISBLANK(EmployeeDecisionContactConfirmDate__c)) &amp;&amp; ISBLANK(AgencyDecisionAcceptDate__c) , 
			   &quot;社員連絡済み&quot;, 
						IF(ISBLANK(EmployeeDecisionContactConfirmDate__c) &amp;&amp; NOT(ISBLANK(AgencyDecisionAcceptDate__c)), 
									&quot;不動産会社連絡済み&quot;, 
									&quot;双方連絡済み&quot;
						)
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>決定連絡状況</label>
    <type>Text</type>
</CustomField>