force-app/main/default/objects/NewMatter__c/fields/DecisionContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionContractStartDate__c</fullName>
    <description>不動産会社が決定物件登録時に入力した契約開始日が格納されます。</description>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>