force-app/main/default/objects/NewMatter__c/fields/DecisionContractStartDateForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionContractStartDateForEmployee__c</fullName>
    <description>決定物件登録時に社員が入力した契約開始日が格納されます。</description>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>