force-app/main/default/objects/NewMatter__c/fields/DecisionMoveDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionMoveDesiredDate__c</fullName>
    <label>決定時入居希望日</label>
    <type>Date</type>
</CustomField>