force-app/main/default/objects/NewMatter__c/fields/DecisionRealEstateNameForEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionRealEstateNameForEmployee__c</fullName>
    <label>決定物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>