force-app/main/default/objects/NewMatter__c/fields/DecisionRoom__c.field-meta.xml
<CustomField>
    <fullName>DecisionRoom__c</fullName>
    <label>決定号室</label>
    <length>255</length>
    <type>Text</type>
</CustomField>