force-app/main/default/objects/NewMatter__c/fields/del_AgencyPhone__c.field-meta.xml
<CustomField>
    <fullName>del_AgencyPhone__c</fullName>
    <formula>Agency__r.Phone</formula>
    <label>（不要）仲介業者TEL</label>
    <type>Text</type>
</CustomField>