force-app/main/default/objects/NewMatter__c/fields/DepositAmortisation__c.field-meta.xml
<CustomField>
    <fullName>DepositAmortisation__c</fullName>
    <formula>FifthSetConfirm__r.DepositAmortisation__c</formula>
    <label>敷引/償却</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>