force-app/main/default/objects/NewMatter__c/fields/DesiredDepositTreatment__c.field-meta.xml
<CustomField>
    <fullName>DesiredDepositTreatment__c</fullName>
    <label>希望敷金扱い</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>敷金無し</fullName>
            </value>
            <value>
                <fullName>スライド</fullName>
            </value>
            <value>
                <fullName>預け替え</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>