force-app/main/default/objects/NewMatter__c/fields/DesiredPreviewDate1__c.field-meta.xml
<CustomField>
    <fullName>DesiredPreviewDate1__c</fullName>
    <formula>Application__r.DesiredPreviewDate1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見希望日１</label>
    <type>Date</type>
</CustomField>