force-app/main/default/objects/NewMatter__c/fields/DesiredPreviewDate1ProgressDays__c.field-meta.xml
<CustomField>
    <fullName>DesiredPreviewDate1ProgressDays__c</fullName>
    <formula>DesiredPreviewDate1__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見希望日１経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>