force-app/main/default/objects/NewMatter__c/fields/DocumentConclusionKinds__c.field-meta.xml
<CustomField>
    <fullName>DocumentConclusionKinds__c</fullName>
    <label>書類締結種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNT覚書</fullName>
            </value>
            <value>
                <fullName>貸主覚書</fullName>
            </value>
            <value>
                <fullName>契約書再締結</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>