force-app/main/default/objects/NewMatter__c/fields/DocumentInputCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentInputCompletedDate__c</fullName>
    <label>書類入力完了日</label>
    <type>Date</type>
</CustomField>