force-app/main/default/objects/NewMatter__c/fields/DocumentName1__c.field-meta.xml
<CustomField>
    <fullName>DocumentName1__c</fullName>
    <label>①書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>