force-app/main/default/objects/NewMatter__c/fields/DocumentName2__c.field-meta.xml
<CustomField>
    <fullName>DocumentName2__c</fullName>
    <label>②書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>