force-app/main/default/objects/NewMatter__c/fields/DocumentName3__c.field-meta.xml
<CustomField>
    <fullName>DocumentName3__c</fullName>
    <label>③書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>