force-app/main/default/objects/NewMatter__c/fields/DocumentReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentReceiptDate__c</fullName>
    <label>書類受領日</label>
    <type>Date</type>
</CustomField>