force-app/main/default/objects/NewMatter__c/fields/DrawingRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>DrawingRegistrationDate__c</fullName>
    <label>図面入力日</label>
    <type>Date</type>
</CustomField>