force-app/main/default/objects/NewMatter__c/fields/EmployeeApprovedContactDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeApprovedContactDate__c</fullName>
    <label>社員承認後連絡日</label>
    <type>Date</type>
</CustomField>