force-app/main/default/objects/NewMatter__c/fields/EmployeeAutoProcessNG__c.field-meta.xml
<CustomField>
    <fullName>EmployeeAutoProcessNG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>社員自動処理NG</label>
    <type>Checkbox</type>
</CustomField>