force-app/main/default/objects/NewMatter__c/fields/EmployeeConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeConfirmDate__c</fullName>
    <label>社員確認日</label>
    <type>Date</type>
</CustomField>