force-app/main/default/objects/NewMatter__c/fields/EmployeeContactContent__c.field-meta.xml
<CustomField>
    <fullName>EmployeeContactContent__c</fullName>
    <formula>ServiceContractNewMatter__r.EmployeeContactContent__c</formula>
    <label>社員連絡内容</label>
    <type>Text</type>
</CustomField>