force-app/main/default/objects/NewMatter__c/fields/EmployeeContactNecessity__c.field-meta.xml
<CustomField>
    <fullName>EmployeeContactNecessity__c</fullName>
    <formula>TEXT(ServiceContractNewMatter__r.EmployeeContactNecessity__c)</formula>
    <label>社員連絡要否</label>
    <type>Text</type>
</CustomField>