force-app/main/default/objects/NewMatter__c/fields/EmployeeDecisionAcceptCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeDecisionAcceptCompletedDate__c</fullName>
    <label>社員決定受付完了日</label>
    <type>Date</type>
</CustomField>