force-app/main/default/objects/NewMatter__c/fields/EmployeeReplyNecessity__c.field-meta.xml
<CustomField>
    <fullName>EmployeeReplyNecessity__c</fullName>
    <formula>TEXT (ServiceContractNewMatter__r.IsEmployeeReply__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社員の返信要否</label>
    <type>Text</type>
</CustomField>