force-app/main/default/objects/NewMatter__c/fields/FifthSetCollector__c.field-meta.xml
<CustomField>
    <fullName>FifthSetCollector__c</fullName>
    <label>五点セット回収者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>