force-app/main/default/objects/NewMatter__c/fields/FifthSetCollectScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>FifthSetCollectScheduledDate__c</fullName>
    <label>回収予定日</label>
    <type>Date</type>
</CustomField>