force-app/main/default/objects/NewMatter__c/fields/FifthSetConfirm__c.field-meta.xml
<CustomField>
    <fullName>FifthSetConfirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約条件</label>
    <referenceTo>FifthSetConfirm__c</referenceTo>
    <relationshipLabel>新規</relationshipLabel>
    <relationshipName>FifthSetConfirmNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>