force-app/main/default/objects/NewMatter__c/fields/FirstCheckDate__c.field-meta.xml
<CustomField>
    <fullName>FirstCheckDate__c</fullName>
    <label>経理手配日</label>
    <type>Date</type>
</CustomField>