force-app/main/default/objects/NewMatter__c/fields/FourWindowsConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>FourWindowsConfirmDate__c</fullName>
    <label>４つ窓確認日</label>
    <type>Date</type>
</CustomField>