force-app/main/default/objects/NewMatter__c/fields/ImportantExplanationRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ImportantExplanationRegistrationDate__c</fullName>
    <label>重説入力日</label>
    <type>Date</type>
</CustomField>