force-app/main/default/objects/NewMatter__c/fields/InsuranceArrangeMonth__c.field-meta.xml
<CustomField>
    <fullName>InsuranceArrangeMonth__c</fullName>
    <label>保険手配日</label>
    <type>Date</type>
</CustomField>