force-app/main/default/objects/NewMatter__c/fields/InsuranceArranger__c.field-meta.xml
<CustomField>
    <fullName>InsuranceArranger__c</fullName>
    <label>保険手配者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>