force-app/main/default/objects/NewMatter__c/fields/IsAgencyAutoNoticeMaster__c.field-meta.xml
<CustomField>
    <fullName>IsAgencyAutoNoticeMaster__c</fullName>
    <formula>Agency__r.IsAutoNotice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仲介業者自動通知不可（マスタ）</label>
    <type>Checkbox</type>
</CustomField>