force-app/main/default/objects/NewMatter__c/fields/LastRentPaymentMonth__c.field-meta.xml
<CustomField>
    <fullName>LastRentPaymentMonth__c</fullName>
    <label>最終家賃支払月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>