force-app/main/default/objects/NewMatter__c/fields/ListViewManager__c.field-meta.xml
<CustomField>
    <fullName>ListViewManager__c</fullName>
    <formula>$User.AcoountId__c =   Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リストビュー_社宅担当者</label>
    <type>Checkbox</type>
</CustomField>