force-app/main/default/objects/NewMatter__c/fields/ListViewRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ListViewRealEstate__c</fullName>
    <formula>$User.AcoountId__c = RealEstate__r.ManagementCompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リストビュー_不動産社員</label>
    <type>Checkbox</type>
</CustomField>