force-app/main/default/objects/NewMatter__c/fields/ManagementTraderName__c.field-meta.xml
<CustomField>
    <fullName>ManagementTraderName__c</fullName>
    <formula>&apos;&apos;</formula>
    <label>管理業者名</label>
    <type>Text</type>
</CustomField>