force-app/main/default/objects/NewMatter__c/fields/MatchingResponder__c.field-meta.xml
<CustomField>
    <fullName>MatchingResponder__c</fullName>
    <label>マッチング対応者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>