force-app/main/default/objects/NewMatter__c/fields/MediationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestDate__c</fullName>
    <label>斡旋依頼日</label>
    <type>Date</type>
</CustomField>