force-app/main/default/objects/NewMatter__c/fields/MediationRequestRequestTraderList__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestRequestTraderList__c</fullName>
    <label>斡旋依頼業者一覧</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>