force-app/main/default/objects/NewMatter__c/fields/MoveCheckSheetEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>MoveCheckSheetEnteredBy__c</fullName>
    <label>入居チェックシート回収者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>