force-app/main/default/objects/NewMatter__c/fields/MoveReason__c.field-meta.xml
<CustomField>
    <fullName>MoveReason__c</fullName>
    <formula>Application__r.MoveReason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>転居理由</label>
    <type>Text</type>
</CustomField>