force-app/main/default/objects/NewMatter__c/fields/MoveScheduledDateApplication__c.field-meta.xml
<CustomField>
    <fullName>MoveScheduledDateApplication__c</fullName>
    <formula>Application__r.MoveScheduledDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居予定日_申請</label>
    <type>Date</type>
</CustomField>