force-app/main/default/objects/NewMatter__c/fields/MoveScheduledDateCheck__c.field-meta.xml
<CustomField>
    <fullName>MoveScheduledDateCheck__c</fullName>
    <formula>IF (
     DecisionMoveDesiredDate__c   =   DecisionMoveDesiredDateForEmployee__c  ,
   &quot;OK&quot;,
   &quot;NG&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居予定日チェック</label>
    <type>Text</type>
</CustomField>