force-app/main/default/objects/NewMatter__c/fields/MoveUseStartScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>MoveUseStartScheduledDate__c</fullName>
    <label>入居（使用開始）予定日</label>
    <type>Date</type>
</CustomField>