force-app/main/default/objects/NewMatter__c/fields/NewCheckSeq__c.field-meta.xml
<CustomField>
    <fullName>NewCheckSeq__c</fullName>
    <label>新規チェックSEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>