force-app/main/default/objects/NewMatter__c/fields/NewMatterId__c.field-meta.xml
<CustomField>
    <fullName>NewMatterId__c</fullName>
    <label>新規ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>