force-app/main/default/objects/NewMatter__c/fields/NissayConfirm__c.field-meta.xml
<CustomField>
    <fullName>NissayConfirm__c</fullName>
    <label>日本生命社確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>