force-app/main/default/objects/NewMatter__c/fields/OccurrenceDateEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceDateEnteredBy__c</fullName>
    <label>発生日入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>